--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <h1>I Love Jamstack </h1>
       <img src="heart.jfif" >
       <p>Share your thoughts and questions on this amazing new web architecture </p>
+      <p>Put youe comments here please!!! </p>
   </body>
 </html>
